# wbqp_controller

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: mobile_manipulator.rviz  params.yaml  wb_plots.xml  wbqp_params.yaml
include/wbqp_controller/: qp_solver_native.hpp  wb_jac.hpp  wbqp_controller.hpp
launch/: wb_ur5e_admittance.launch.py  wbqp_controller.launch.py
src/: qp_solver_native.cpp  tcp_pose_converter.cpp  wbqp_controller.cpp  wbqp_menu.cpp
tp_control_lib/examples/: example_main.cpp
tp_control_lib/include/tp_control/: common.hpp  controller.hpp  kinematics.hpp  solver.hpp  task.hpp
tp_control_lib/include/tp_control/tasks/: joint_limit_task.hpp  pointcloud_collision_task.hpp  singularity_task.hpp  tracking_task.hpp
tp_control_lib/src/: StackOfTasksSolver.cpp  TaskPriorityController.cpp
tp_control_lib/src/tasks/: JointLimitTask.cpp  PointCloudCollisionTask.cpp  SingularityTask.cpp  TrackingTask.cpp
